# dmlclean

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/: CODEOWNERS  SECRETS.md  dependabot.yml
.github/workflows/: ci-cd.yml
adr/: 001-repository-pattern.md  002-service-layer.md  003-plugin-discovery.md  004-github-releases-registry.md
assets/: dmlclean.icns  dmlclean.manifest
completions/: dmlclean.bash  dmlclean.fish  dmlclean.ps1  dmlclean.zsh
docker/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: ADRS.md  ARCHITECTURE.md  BADGES.md  CHANGELOG.md  CLI_REFERENCE.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  FAQ.md  PRODUCTION_RELEASE_GUIDE.md  QUICKSTART.md  RELEASE_GUIDE.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  cli-commands.md  index.md  installation.md  storage-paths.md
scripts/: bump_version.py  check_deps.py  gen_ref_pages.py  generate_icons.py  install_deps.bat  install_deps.sh  setup.bat  setup.sh
src/dmlclean/: __init__.py  __main__.py  container.py  version.txt
src/dmlclean/cli/: __init__.py  app.py  context.py
src/dmlclean/cli/commands/: __init__.py  clean.py  config.py  doctor.py  history.py  notification.py  plugin_cmd.py  profile.py  protect.py  report.py  scan.py  schedule.py  storage_cmd.py  system.py  trends.py
src/dmlclean/cli/formatters/: __init__.py  base.py  factory.py  json_fmt.py  plain.py  table.py
src/dmlclean/cli/middleware/: __init__.py  error_handler.py  update_check.py
src/dmlclean/config/: __init__.py  defaults.py  loader.py  profiles.py  schema.py
src/dmlclean/constants/: __init__.py  app.py  formats.py  messages.py  risk.py
src/dmlclean/core/: __init__.py  analyzer.py  cleaner.py  deduplicator.py  pipeline.py  plugin_scanner.py  scanner.py  scheduler.py
src/dmlclean/domain/: __init__.py  events.py
src/dmlclean/dtos/: __init__.py  clean.py  history.py  protect.py  scan.py  schedule.py
src/dmlclean/exceptions/: __init__.py  base.py  cli.py  config.py  plugin.py  repository.py  safety.py  storage.py
src/dmlclean/models/: __init__.py  clean.py  history.py  manifest.py  profile.py  scan.py  schedule.py  trend.py
src/dmlclean/notifications/: __init__.py  handlers.py  manager.py  notifier.py
src/dmlclean/notifications/backends/: __init__.py  desktop.py  dummy.py  plyer_backend.py
src/dmlclean/plugins/: __init__.py  ai_ml.py  base.py  browser.py  builtin.py  cloud_sync.py  dev_java.py  dev_node.py  dev_python.py  dev_rust_cpp.py  gaming.py  ide.py  loader.py  media.py  messaging.py  package_mgr.py  smart_scan.py  system_junk.py
src/dmlclean/reports/: __init__.py  exporter.py  history.py  terminal.py
src/dmlclean/safety/: __init__.py  manifest.py  protected_zone.py  undo.py
src/dmlclean/services/: __init__.py  cleaning_service.py  history_service.py  plugin_service.py  protection_service.py  report_service.py  schedule_service.py
src/dmlclean/storage/: __init__.py  database.py  history_repo.py  manifest_repo.py  paths.py  protected_repo.py  repository.py  schedule_repo.py  trend_repo.py  uow.py
src/dmlclean/storage/migrations/: 001_initial.sql  002_add_schedules.sql  003_add_indexes.sql
src/dmlclean/utils/: __init__.py  dates.py  hashing.py  paths.py  platform.py  sizes.py  validators.py
tests/: __init__.py  conftest.py  test_output.txt  test_results.json  test_results.txt  test_results_v2.txt  test_results_v3.txt
tests/cli/: __init__.py  test_plugin_cmd.py  test_profile.py  test_storage_cmd.py  test_system.py  test_trends.py
tests/integration/: test_cli.py  test_pipeline.py  test_pipeline_integration.py  test_v2_architecture.py
tests/scripts/: run_command_tests.py  test_commands.bat  test_results.json  test_results.txt  test_results_100pct.txt  test_results_final.txt  test_results_final_v2.txt  test_results_v4.txt
tests/unit/: test_cleaner.py  test_cli_commands_comprehensive.py  test_cli_config.py  test_cli_scan.py  test_cli_subcommands.py  test_config.py  test_core_comprehensive.py  test_core_scheduler.py  test_deduplicator.py  test_history_repo.py  test_manifest.py  test_manifest_trend_repo.py  test_more_services.py  test_notifications.py  test_plugins_all.py  test_plugins_comprehensive.py  test_protected_repo.py  test_protected_zone.py  test_reports.py  test_reports_history.py  test_repositories_comprehensive.py  test_scanner.py  test_schedule_repo.py  test_services.py  test_services_comprehensive.py  test_undo.py  test_utils.py  test_v2_components.py
tests/unit/cli/: test_clean_cmd.py  test_history_cmd.py  test_protect_cmd.py  test_scan_cmd.py  test_storage_cmd.py  test_system_cmd.py
tests/unit/services/: test_cleaning_service.py  test_history_service.py  test_protection_service.py
tests/unit/storage/: test_history_repo.py
tests/unit/test_plugins/: test_plugins.py
tests/unit/utils/: test_validators.py
