[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dmlclean"
version = "0.1.0"
description = "Enterprise-grade, module-driven framework engineered for automated system maintenance and storage lifecycle management."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "DML Labs", email = "devmayank.inbox@gmail.com" }
]
keywords = [
    "cleaner",
    "disk-cleanup",
    "cli",
    "system-utility",
    "file-cleanup",
    "cache-cleaner",
    "cross-platform",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: System Shells",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "psutil>=5.9",
    "send2trash>=1.8",
    "platformdirs>=4.2",
    "aiofiles>=23.2",
    "apscheduler>=3.10",
    "loguru>=0.7",
    "desktop-notifier>=5.0",
    "plyer>=2.1",
    "xxhash>=3.4",
    "tomli-w>=1.0",
    "pydantic>=2.6",
    "humanize>=4.9",
    "watchdog>=4.0",
    "croniter>=2.0",
    "parsedatetime>=2.6",
    # New dependencies for Repository Pattern + Plugin System
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic-settings>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "pytest-asyncio",
    "pyfakefs",
    "hypothesis",
    "ruff",
    "mypy",
    "bandit",
    "pre-commit",
    "hatch",
    "pyinstaller",
    # Additional testing tools
    "pytest-mock>=3.12",
    "freezegun>=1.4",
    "vcrpy>=6.0",
    # Documentation generation
    "click-man>=0.4",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]

[project.scripts]
dmlclean = "dmlclean.cli.app:app"

[project.entry-points."dmlclean.plugins"]
builtin = "dmlclean.plugins.builtin"

[project.urls]
Homepage = "https://github.com/Devmayank-official/dmlclean"
Documentation = "https://github.com/Devmayank-official/dmlclean#readme"
Repository = "https://github.com/Devmayank-official/dmlclean.git"
Issues = "https://github.com/Devmayank-official/dmlclean/issues"
Changelog = "https://github.com/Devmayank-official/dmlclean/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dmlclean"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4",
    "pytest-cov",
    "pytest-asyncio",
    "pyfakefs",
    "hypothesis",
]

[tool.hatch.envs.default.scripts]
test = "pytest --cov=src/dmlclean --cov-report=term-missing {args}"
test-cov = "pytest --cov=src/dmlclean --cov-report=xml --cov-report=html {args}"
test-quick = "pytest -x -v {args}"

[tool.hatch.envs.lint]
dependencies = ["ruff", "mypy", "bandit", "pre-commit"]

[tool.hatch.envs.lint.scripts]
check = "ruff check src/ tests/ {args}"
format = "ruff format src/ tests/ {args}"
format-check = "ruff format --check src/ tests/ {args}"
type-check = "mypy --strict src/ {args}"
security = "bandit -r src/ -ll {args}"
pre-commit = "pre-commit run --all-files {args}"

[tool.hatch.envs.release]
dependencies = ["pyinstaller", "hatch"]

[tool.hatch.envs.release.scripts]
build-binary = "pyinstaller dmlclean.spec --clean"
build-sdist = "hatch build --clean --targets sdist"
build-wheel = "hatch build --clean --targets wheel"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "T20",    # flake8-print
    "Q",      # flake8-quotes
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "S101",   # Allow assert in tests (will be overridden per-file)
    "S104",   # Allow 0.0.0.0 bindings in dev code
    "S603",   # Allow subprocess without shell=True (we audit manually)
    "S607",   # Allow partial executable paths (we audit manually)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004"]
"src/dmlclean/cli/**/*.py" = ["T201"]  # Allow print in CLI for raw output

[tool.ruff.lint.isort]
known-first-party = ["dmlclean"]
known-third-party = [
    "aiofiles",
    "apscheduler",
    "croniter",
    "desktop_notifier",
    "humanize",
    "loguru",
    "parsedatetime",
    "platformdirs",
    "plyer",
    "psutil",
    "pydantic",
    "rich",
    "send2trash",
    "typer",
    "watchdog",
    "xxhash",
]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "croniter.*",
    "desktop_notifier.*",
    "parsedatetime.*",
    "plyer.*",
    "send2trash.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src/dmlclean",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-fail-under=60",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "windows: marks tests as Windows-specific",
    "macos: marks tests as macOS-specific",
    "linux: marks tests as Linux-specific",
]

[tool.coverage.run]
branch = true
source = ["src/dmlclean"]
omit = [
    "*/__main__.py",
    "*/cli/app.py",  # Entry point, hard to test
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@abstractmethod",
    "pass",
]

[tool.bandit]
targets = ["src/dmlclean"]
exclude_dirs = ["tests"]
skips = ["B101", "B403", "B405"]  # assert, pickle, xml.etree

[tool.pyinstaller]
# PyInstaller configuration is in dmlclean.spec
# This section is for reference only
